WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
254452
[PlayStation] Fix assertion crash of libpas pthread implementation.
https://bugs.webkit.org/show_bug.cgi?id=254452
Summary
[PlayStation] Fix assertion crash of libpas pthread implementation.
Basuke Suzuki
Reported
2023-03-24 18:21:39 PDT
Typo.
Attachments
Add attachment
proposed patch, testcase, etc.
EWS
Comment 1
2023-03-24 19:30:15 PDT
Committed
262107@main
(b387b3c61cea): <
https://commits.webkit.org/262107@main
> Reviewed commits have been landed. Closing PR #11960 and removing active labels.
Radar WebKit Bug Importer
Comment 2
2023-03-24 19:31:15 PDT
<
rdar://problem/107212777
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug