[PlayStation] Fix assertion crash of libpas pthread implementation. https://bugs.webkit.org/show_bug.cgi?id=254452

Reviewed by Don Olmstead.

Fix trivial mistake which uses errno instead of returned error value.

* Source/bmalloc/libpas/src/libpas/pas_lock.h:
(pas_lock_try_lock):

Canonical link: https://commits.webkit.org/262107@main